pom: add exta java option to run powermock test under java17
Result:
it's possible to use java17 compiler to produce java11 bytecode

Acked-by: Lea Morschel
Target: master
Require-book: no
Require-notes: no